--- a/docs/latex/orb_cite.bib
+++ b/docs/latex/orb_cite.bib
@@ -61,6 +61,16 @@
   title = {Gammon Software Solutions},  
   howpublished = {\url{http://www.gammon.com.au}},
 }
+@misc{intSLAM_I,
+author = {Hugh Durrant-Whyte and Tim Bailey},
+title={{Simultaneous Localization and Mapping (SLAM) : Part I The Essential Algorithms}},
+howpublished = {\url{https://people.eecs.berkeley.edu/~pabbeel/cs287-fa09/readings/Durrant-Whyte_Bailey_SLAM-tutorial-I.pdf}},
+}
+@misc{intSLAM_II,
+author = {Tim Bailey and Hugh Durrant-Whyte},
+title = {{Simultaneous Localization and Mapping (SLAM):Part II State of the Art}},
+howpublished = {\url{https://pdfs.semanticscholar.org/27d4/6db7ed4e96944080052b761c62102f26b23f.pdf}},
+}
 @inproceedings{MooreStouchKeneralizedEkf2014,
   author    = {T. Moore and D. Stouch},
   title     = {A Generalized Extended Kalman Filter Implementation for the Robot Operating System},
@@ -69,7 +79,6 @@
   booktitle = {Proceedings of the 13th International Conference on Intelligent Autonomous Systems (IAS-13)},
   publisher = {Springer}
 }
-
 @article{hornung13auro,
   author = {Armin Hornung and Kai M. Wurm and Maren Bennewitz and Cyrill
   Stachniss and Wolfram Burgard},
