--- a/docs/latex/0main.tex
+++ b/docs/latex/0main.tex
@@ -136,6 +136,8 @@ Las imágenes y medidas de profundidad utilizadas para las técnicas SLAM provie
 \nocite{atmega}
 \nocite{mpu6050_datasheet}
 \nocite{mpu6050_regmap}
+\nocite{intSLAM_I}
+\nocite{intSLAM_II}
 % \url{http://introlab.github.io/rtabmap/} \\
 % \url{https://introlab.3it.usherbrooke.ca/mediawiki-introlab/images/7/7a/Labbe18JFR_preprint.pdf} \\
 % \url{https://introlab.3it.usherbrooke.ca/mediawiki-introlab/images/b/bc/TRO2013.pdf}
