--- a/docs/latex/1hard.tex
+++ b/docs/latex/1hard.tex
@@ -95,5 +95,7 @@ El micro cuenta con una memoria flash progamable de 32 kilobytes y una eeprom de
 La potencia eléctrica necesaria para que el micro, y sus periféricos, operen correctamente (5V y menos de 100mA) se obtienen por el puerto USB desde la Raspberry Pi, aprovechando el bus de comunicación serie.
 
 \subsection{Cámara}
-La \textit{Kinect for Xbox 360} integra una cámara RGB y un sensor de profundidad de luz infrarroja estructurada. El rango del sensor de profundidad alcanza, aproximadamente, de los 0.7 a los seis o siete metros. El campo de visión del dispositivo es de 57º horizontalmente y 43º en la vertical, aunque cuenta con un soporte motorizado capaz de inclinar la cámara MASMENOS 27º verticalmente. La resolución máxima de la cámara es de 1280x1024 píxeles, pero la más usada es 640x480 píxeles puesto que el frame rate depende fuertemente de la resolución con la que se trabaje, con un techo en los 30Hz.\\
+La \textit{Kinect for Xbox 360} integra una cámara RGB y un sensor de profundidad de luz infrarroja estructurada. El rango del sensor de profundidad esta comprendido entre los 0.7 y los 6 metros.\\
+El campo de visión del dispositivo es de 57º horizontalmente y 43º en la vertical, aunque cuenta con un soporte motorizado capaz de inclinar la cámara MASMENOS 27º verticalmente. \\
+La resolución máxima de la cámara es de 1280x1024 píxeles, pero la más usada es 640x480 píxeles puesto que el frame rate depende fuertemente de la resolución con la que se trabaje, con un techo en los 30Hz.\\
 La Kinect emplea un conector propietario que no es más que un conector USB con dos líneas de alimentación adicionales a 12 voltios.
