al carajo el gato

--- a/docs/latex/1hard.tex
+++ b/docs/latex/1hard.tex
@@ -32,7 +32,7 @@ La disposición geométrica es la de un vehículo diferencial, con tres pares de
  todos presentan un comportamiento común, una gran zona muerta que complicará mucho la operación del robot a velocidades extremadamente bajas. En concreto, con el convesor digital-analógico del microcontrolador seleccionado (más detalles en la seccion2.arduino), se pierde un 40\% de los bits del rango de salida a causa de este incoveniente.  
  \begin{figure}[h!]
  	\centering
- 	\includegraphics[width=.3\textwidth]{images/hw/motor_est}
+ 	\includegraphics[width=.6\textwidth]{images/hw/estatica}
  	\caption{Característica estática de un motor}
  \end{figure}
  \newpage
